--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ DB_USER='mukamisha'
 DB_PASSWORD='mukamisha@97'
 DB_HOST='127.0.0.1'
 MODE='prod'
-ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+ALLOWED_HOSTS=[]
 DISABLE_COLLECTSTATIC=1
