--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 config==0.3.9
+confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==1.11
 django-bootstrap3==10.0.1
 django-heroku==0.3.1
+django-registration==2.4.1
+django-tinymce==2.8.0
 gunicorn==19.9.0
 Pillow==5.2.0
 psycopg2==2.7.5
+psycopg2-binary==2.8.4
 python-decouple==3.1
 pytz==2018.5
 whitenoise==4.0
