--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_NAME='neighbor'
 DB_USER='mukamisha'
 DB_PASSWORD='mukamisha@97'
 DB_HOST='127.0.0.1'
-MODE='prod'
+MODE='pro'
 ALLOWED_HOSTS=[]
 DISABLE_COLLECTSTATIC=1
