--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 SECRET_KEY='@-(a_0qo*gpkxe4fdwpfwftr)m31!bv0jv@@w2m(1^w71flh#!'
-DEBUG=False
+DEBUG=True
 DB_NAME='neighbor'
 DB_USER='mukamisha'
 DB_PASSWORD='mukamisha@97'
 DB_HOST='127.0.0.1'
-MODE='pro'
+MODE='dev'
 ALLOWED_HOSTS=[]
 DISABLE_COLLECTSTATIC=1
